Final final presentation

--- a/LaTeX/Presentation/presentation.tex
+++ b/LaTeX/Presentation/presentation.tex
@@ -13,8 +13,8 @@
         Department of Physics (MSc.)\\
         Sem-IV\\[1.2em]
         \textit{Supervised by,}\\
-        Dr. Rohit Mukherjee\\
-        Assistant Professor of Dept. of Physics (MSc.)\\
+        Dr.\ Rohit Mukherjee\\
+        Assistant Professor of Dept.\ of Physics (MSc.)\\
         Sarala Birla University}
 \date{}
 
@@ -102,17 +102,16 @@
 
 \begin{frame}{Kerr Nonlinearity: Re $\chi^{(3)}$}
   \vspace{-4pt}
-  \hspace*{36pt}
+  \hspace*{43pt}
   \includegraphics[width=0.75\textwidth]{Assets/Real_chi3_Omega_d.jpeg}
   \begin{itemize}
     \item $\Omega_c$, $\Omega_d$ enhance Kerr nonlinearity.
-    \item Enables efficient four-wave mixing and phase modulation.
     \item $\chi^{(3)}$ control $\Rightarrow$ quantum gates, optical switches.
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Modulation Instability Gain}
-  \hspace*{40pt}
+  \hspace*{45pt}
   \includegraphics[width=0.69\textwidth]{Assets/G_v_Power.jpeg}
   \begin{itemize}
     \item MI gain shows symmetric sidebands $\Rightarrow$ phase matching.
@@ -123,7 +122,7 @@
 
 \begin{frame}{MI Gain}
   \vspace{-12pt}
-  \hspace*{32pt}
+  \hspace*{40pt}
   \includegraphics[width=0.8\textwidth]{Assets/Beta2_Kerr.jpeg}
   \begin{itemize}
     \item Fourth-order dispersion ($\beta_4$) broadens bandwidth.
@@ -138,6 +137,11 @@
     \item Slow light and optical buffers
     \item Frequency combs and all-optical logic
   \end{itemize}
+\end{frame}
+
+\begin{frame}{Questions}
+  \centering
+  {\Huge \bfseries Thank You For Your Attention}
 \end{frame}
 
 \end{document}
