final final final

--- a/LaTeX/Presentation/presentation.tex
+++ b/LaTeX/Presentation/presentation.tex
@@ -114,7 +114,7 @@
   \hspace*{45pt}
   \includegraphics[width=0.69\textwidth]{Assets/G_v_Power.jpeg}
   \begin{itemize}
-    \item MI gain shows symmetric sidebands $\Rightarrow$ phase matching.
+    \item MI gain shows asymmetric sidebands $\Rightarrow$ higher order dispersion.
     \item Gain increases with laser power.
     \item Peaks shift outward with higher nonlinear refractive index.
   \end{itemize}
@@ -139,7 +139,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Questions}
+\begin{frame}{Questions?}
   \centering
   {\Huge \bfseries Thank You For Your Attention}
 \end{frame}
